src/styles.css
/* You can add global styles to this file, and also import other style files */
@import "~@angular/material/prebuilt-themes/indigo-pink.css";

body {
    margin: 0px;
}

.mat-list-item-content {
    padding: 0px !important;
}

.mat-toolbar-row {
    padding: 0px !important;
}

.mat-row:active {
    background: rgba(0,0,0,0.16);
    outline: none;
}

